# document_search

./: .gitignore  pyproject.toml
.github/workflows/: ai-pr-reviewer.yml  test.yml
src/: main.py  sample_for_ai_revew.py
src/openai_tools/: chat.py  client.py  embedding.py
tests/test_openai_tools/: test_chat.py
